# cookiecutter-minimal-python

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test_requirements.txt
{{cookiecutter.project_name}}/.github/workflows/: main.yml
{{cookiecutter.project_name}}/tests/{{cookiecutter.project_slug}}/: test_smoke.py
