[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
authors = [
    {name = "{{cookiecutter.full_name}}", email = "<{{cookiecutter.email}}>"}
]
readme = "README.md"
requires-python = ">=3.11"

packages = [
    { include = "{{cookiecutter.project_slug}}", from = "src" },
]

dependencies = [

]


[project.urls]
repository = "{{cookiecutter.project_url}}"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]


[tool.coverage.paths]
source = ["src"]
tests = ["tests"]


[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_slug}}", "tests"]


[tool.coverage.report]
show_missing = true
fail_under = 100


[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2


[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
